quello che voglio

--- a/inserimentoDocenti.html
+++ b/inserimentoDocenti.html
@@ -14,12 +14,12 @@
 
     <form id="formDocente">
       <label for="nome"></label>
-      <input type="text" class="inputLabel" placeholder="Nome:" id="nome" name="nome" required />
+      <input class="inputs" type="text" class="inputLabel" placeholder="Nome:" id="nome" name="nome" required />
 
       <label for="cognome"></label>
-      <input type="text" class="inputLabel" placeholder="cognome:" id="cognome" name="cognome" required />
+      <input class="inputs" type="text" class="inputLabel" placeholder="cognome:" id="cognome" name="cognome" required />
 
-      <select class="form-select" class="inputLabel" id="sesso" aria-label="Default select example">
+      <select class="inputs" class="form-select" class="inputLabel" id="sesso" aria-label="Default select example">
   <option selected>Sesso</option>
   <option value="maschio">Maschio</option>
   <option value="femmina">Femmina</option>
@@ -27,21 +27,21 @@
 </select>
 
       <label for="email"></label>
-      <input type="email" placeholder="Email:" class="text-lowercase" class="inputLabel" id="email" name="email" required />
+      <input class="inputs" type="email" placeholder="Email:" class="text-lowercase" class="inputLabel" id="email" name="email" required />
 
       <label for="telefono"></label>
-      <input type="tel" class="inputLabel" placeholder="Telefono:" id="telefono" name="telefono" required />
+      <input class="inputs" type="tel" class="inputLabel" placeholder="Telefono:" id="telefono" name="telefono" required />
 
       <label for="dataNascita"></label>
-      <input type="date" class="inputLabel" placeholder="Data di nascita:" id="dataNascita" name="dataNascita" required />
+      <input class="inputs" type="date" class="inputLabel" placeholder="Data di nascita:" id="dataNascita" name="dataNascita" required />
 
       <label for="cf"></label>
-      <input type="text" class="text-uppercase" placeholder="Codice fiscale:" class="inputLabel" id="cf" name="cf" required />
+      <input class="inputs" type="text" class="text-uppercase" placeholder="Codice fiscale:" class="inputLabel" id="cf" name="cf" required />
 
             <label for="note"></label>
-      <input type="text" class="inputLabel" placeholder="note:" id="note" name="note"/>
+      <input class="inputs" type="text" class="inputLabel" placeholder="note:" id="note" name="note"/>
 
-<select class="form-select" class="inputLabel" id="materiaInsegnata" aria-label="Default select example">
+<select class="inputs" class="form-select" class="inputLabel" id="materiaInsegnata" aria-label="Default select example">
   <option selected>Materia insegnata</option>
   <option value="Italiano">Italiano</option>
   <option value="Matematica">Matematica</option>
@@ -51,21 +51,21 @@
   <option value="Filosofia">Filosofia</option>
 </select>
 
-      <label for="dataAssunzione">Data Assunzione</label>
-      <input type="date" id="dataAssunzione" class="inputLabel" name="dataAssunzione" required />
+      <label for="dataAssunzione"></label>
+      <input class="inputs" type="date" placeholder="Data di assunzione" id="dataAssunzione" class="inputLabel" name="dataAssunzione" required />
 
       <div class="containerIndirizzo">
         <h3>Indirizzo:</h3>
         <label for="via"></label>
-      <input type="text" class="inputLabel" placeholder="via:" id="via" name="via"/>
+      <input class="inputs" type="text" class="inputLabel" placeholder="via:" id="via" name="via"/>
       <label for="cap"></label>
-      <input type="number" class="inputLabel" placeholder="cap:" id="cap" name="cap"/>
+      <input class="inputs" type="number" class="inputLabel" placeholder="cap:" id="cap" name="cap"/>
       <label for="comune"></label>
-      <input type="text" class="inputLabel" placeholder="comune:" id="comune" name="comune"/>
+      <input class="inputs" type="text" class="inputLabel" placeholder="comune:" id="comune" name="comune"/>
       <label for="provincia"></label>
-      <input type="text" class="inputLabel" placeholder="provincia:" id="provincia" name="provincia"/>
+      <input class="inputs" type="text" class="inputLabel" placeholder="provincia:" id="provincia" name="provincia"/>
       <label for="nazione"></label>
-      <input type="text" class="inputLabel" placeholder="nazione:" id="nazione" name="nazione"/>
+      <input class="inputs" type="text" class="inputLabel" placeholder="nazione:" id="nazione" name="nazione"/>
       </div>
 
 
