--- a/aggiungiStudenti.html
+++ b/aggiungiStudenti.html
@@ -86,7 +86,7 @@
           type="tel"
           class="form-control"
           id="telefono_studente"
-        / required>
+        required>
       </div>
 
       <div class="col-md-6">
