--- a/inserimentoDocenti.html
+++ b/inserimentoDocenti.html
@@ -5,75 +5,231 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Inserimento Docenti</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-   <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+   <link rel="stylesheet" href="./assets/css/insdocenti.css">
   </head>
-  <body>
-    <div class="containerTitle">
-    <h1>form di inserimento docente</h1>
-    </div>
-
-    <form id="formDocente">
-      <label for="nome"></label>
-      <input class="inputs" type="text" class="inputLabel" placeholder="Nome:" id="nome" name="nome" required />
-
-      <label for="cognome"></label>
-      <input class="inputs" type="text" class="inputLabel" placeholder="cognome:" id="cognome" name="cognome" required />
-
-      <select class="inputs" class="form-select" class="inputLabel" id="sesso" aria-label="Default select example">
-  <option selected>Sesso</option>
-  <option value="maschio">Maschio</option>
-  <option value="femmina">Femmina</option>
-  <option value="altro">Altro</option>
-</select>
-
-      <label for="email"></label>
-      <input class="inputs" type="email" placeholder="Email:" class="text-lowercase" class="inputLabel" id="email" name="email" required />
-
-      <label for="telefono"></label>
-      <input class="inputs" type="tel" class="inputLabel" placeholder="Telefono:" id="telefono" name="telefono" required />
-
-      <label for="dataNascita"></label>
-      <input class="inputs" type="date" class="inputLabel" placeholder="Data di nascita:" id="dataNascita" name="dataNascita" required />
-
-      <label for="cf"></label>
-      <input class="inputs" type="text" class="text-uppercase" placeholder="Codice fiscale:" class="inputLabel" id="cf" name="cf" required />
-
-            <label for="note"></label>
-      <input class="inputs" type="text" class="inputLabel" placeholder="note:" id="note" name="note"/>
-
-<select class="inputs" class="form-select" class="inputLabel" id="materiaInsegnata" aria-label="Default select example">
-  <option selected>Materia insegnata</option>
-  <option value="Italiano">Italiano</option>
-  <option value="Matematica">Matematica</option>
-  <option value="Inglese">Inglese</option>
-  <option value="Storia">Storia</option>
-  <option value="Geografia">Geografia</option>
-  <option value="Filosofia">Filosofia</option>
-</select>
-
-      <label for="dataAssunzione"></label>
-      <input class="inputs" type="date" placeholder="Data di assunzione" id="dataAssunzione" class="inputLabel" name="dataAssunzione" required />
-
-      <div class="containerIndirizzo">
-        <h3>Indirizzo:</h3>
-        <label for="via"></label>
-      <input class="inputs" type="text" class="inputLabel" placeholder="via:" id="via" name="via"/>
-      <label for="cap"></label>
-      <input class="inputs" type="number" class="inputLabel" placeholder="cap:" id="cap" name="cap"/>
-      <label for="comune"></label>
-      <input class="inputs" type="text" class="inputLabel" placeholder="comune:" id="comune" name="comune"/>
-      <label for="provincia"></label>
-      <input class="inputs" type="text" class="inputLabel" placeholder="provincia:" id="provincia" name="provincia"/>
-      <label for="nazione"></label>
-      <input class="inputs" type="text" class="inputLabel" placeholder="nazione:" id="nazione" name="nazione"/>
+<body>
+    <header class="site-header">
+      <div class="container-header">
+        <div class="row h-100">
+          <div class="col-5 d-flex justify-content-start align-items-center">
+            <ul class="list-container">
+              <li>
+                <button class="btn-stud" id="apriForm">Studente</button>
+              </li>
+              <li>
+                <button class="btn-stud" href="#" role="link">Docente</button>
+              </li>
+              <li>
+                <button class="btn-stud" href="#" role="link">
+                  Amministrativo
+                </button>
+              </li>
+            </ul>
+          </div>
+          <div class="col-2 d-flex justify-content-center align-items-center">
+            <svg
+              width="431"
+              height="388"
+              viewBox="0 0 431 388"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M431 388H271.382C270.682 358.013 193.622 273.248 191.623 259.054C122.058 260.254 149.344 388 141.748 388H2.11958C-6.97582 292.74 10.8151 207.676 102.468 164.194L2.11958 1.16249H146.746L241.497 120.212C289.772 72.233 276.779 5.76059 281.377 1.06259C283.775 -1.33641 339.247 1.06259 351.241 1.16249C371.131 1.36239 391.22 0.862591 411.11 1.06259C415.708 80.129 417.307 154.598 341.246 199.479C340.147 206.176 324.155 217.172 322.955 225.868C320.257 246.859 421.505 354.814 431 388Z"
+                fill="#20B7CA"
+              />
+            </svg>
+          </div>
+          <div class="col-5 d-flex justify-content-center align-items-center">
+            <ul class="list-container">
+              <li>
+                <a class="btn" href="#" role="button">SEARCH</a>
+              </li>
+              <li>
+                <a class="btn" href="#" role="button">LOGOUT</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </header>
+    <!-- ./header -->
+  
+    <div class="containerTutto">
+      <div class="containerTitle text-center mb-4">
+        <h1>Form di Inserimento Docente</h1>
       </div>
 
+      <form id="formDocente">
+        <label for="nome">Nome:</label>
+        <input
+          class="inputs form-control"
+          type="text"
+          id="nome"
+          name="nome"
+          placeholder="Nome"
+          required
+        />
 
+        <label for="cognome">Cognome:</label>
+        <input
+          class="inputs form-control"
+          type="text"
+          id="cognome"
+          name="cognome"
+          placeholder="Cognome"
+          required
+        />
 
-      <button class="salva" type="submit">Salva</button>
-    </form>
+        <label for="sesso">Sesso:</label>
+        <select
+          class="inputs form-select"
+          id="sesso"
+          name="sesso"
+          required
+        >
+          <option value="" disabled selected>Seleziona sesso</option>
+          <option value="maschio">Maschio</option>
+          <option value="femmina">Femmina</option>
+          <option value="altro">Altro</option>
+        </select>
+
+        <label for="email">Email:</label>
+        <input
+          class="inputs form-control text-lowercase"
+          type="email"
+          id="email"
+          name="email"
+          placeholder="Email"
+          required
+        />
+
+        <label for="telefono">Telefono:</label>
+        <input
+          class="inputs form-control"
+          type="tel"
+          id="telefono"
+          name="telefono"
+          placeholder="Telefono"
+          required
+        />
+
+        <label for="dataNascita">Data di nascita:</label>
+        <input
+          class="inputs form-control"
+          type="date"
+          id="dataNascita"
+          name="dataNascita"
+          required
+        />
+
+        <label for="cf">Codice Fiscale:</label>
+        <input
+          class="inputs form-control text-uppercase"
+          type="text"
+          id="cf"
+          name="cf"
+          placeholder="Codice Fiscale"
+          required
+        />
+
+        <label for="note">Note:</label>
+        <input
+          class="inputs form-control"
+          type="text"
+          id="note"
+          name="note"
+          placeholder="Note (facoltative)"
+        />
+
+        <label for="materiaInsegnata">Materia insegnata:</label>
+        <select
+          class="inputs form-select"
+          id="materiaInsegnata"
+          name="materiaInsegnata"
+          required
+        >
+          <option value="" disabled selected>Seleziona materia</option>
+          <option value="Italiano">Italiano</option>
+          <option value="Matematica">Matematica</option>
+          <option value="Inglese">Inglese</option>
+          <option value="Storia">Storia</option>
+          <option value="Geografia">Geografia</option>
+          <option value="Filosofia">Filosofia</option>
+        </select>
+
+        <label for="dataAssunzione">Data di assunzione:</label>
+        <input
+          class="inputs form-control"
+          type="date"
+          id="dataAssunzione"
+          name="dataAssunzione"
+          required
+        />
+      <div class="containerIndirizzo">
+        <fieldset class="mt-4">
+          <h2>Indirizzo</h2>
+
+          <label for="via">Via:</label>
+          <input
+            class="inputs form-control"
+            type="text"
+            id="via"
+            name="via"
+            placeholder="Via"
+          />
+
+          <label for="cap">CAP:</label>
+          <input
+            class="inputs form-control"
+            type="number"
+            id="cap"
+            name="cap"
+            placeholder="CAP"
+          />
+
+          <label for="comune">Comune:</label>
+          <input
+            class="inputs form-control"
+            type="text"
+            id="comune"
+            name="comune"
+            placeholder="Comune"
+          />
+
+          <label for="provincia">Provincia:</label>
+          <input
+            class="inputs form-control"
+            type="text"
+            id="provincia"
+            name="provincia"
+            placeholder="Provincia"
+          />
+
+          <label for="nazione">Nazione:</label>
+          <input
+            class="inputs form-control"
+            type="text"
+            id="nazione"
+            name="nazione"
+            placeholder="Nazione"
+          />
+        </fieldset>
+
+        <div class="text-center mt-4">
+          <button class="btn btn-primary" type="submit">Salva</button>
+        </div>
+      </form>
+    </div>
     
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+      crossorigin="anonymous"
+    ></script>
+
     <script src="./assets/js/inserimentoDocenti.js"></script>
   </body>
 </html>
