--- a/inserimentoDocenti.html
+++ b/inserimentoDocenti.html
@@ -62,6 +62,8 @@
       </div>
 
       <form id="formDocente">
+    <div class="row">
+      <div class="col">        
         <label for="nome">Nome:</label>
         <input
           class="inputs form-control"
@@ -71,7 +73,9 @@
           placeholder="Nome"
           required
         />
+      </div>
 
+        <div class="col">
         <label for="cognome">Cognome:</label>
         <input
           class="inputs form-control"
@@ -81,7 +85,10 @@
           placeholder="Cognome"
           required
         />
-
+      </div>
+    </div>
+        
+  <div class="col">
         <label for="sesso">Sesso:</label>
         <select
           class="inputs form-select"
@@ -94,7 +101,10 @@
           <option value="femmina">Femmina</option>
           <option value="altro">Altro</option>
         </select>
-
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
         <label for="email">Email:</label>
         <input
           class="inputs form-control text-lowercase"
@@ -104,7 +114,9 @@
           placeholder="Email"
           required
         />
-
+        </div>
+<div class="row">
+        <div class="col">
         <label for="telefono">Telefono:</label>
         <input
           class="inputs form-control"
@@ -114,7 +126,8 @@
           placeholder="Telefono"
           required
         />
-
+        </div>        
+<div class="col">
         <label for="dataNascita">Data di nascita:</label>
         <input
           class="inputs form-control"
@@ -123,7 +136,10 @@
           name="dataNascita"
           required
         />
-
+        </div>
+        </div>
+        <div class="row">
+<div class="col">
         <label for="cf">Codice Fiscale:</label>
         <input
           class="inputs form-control text-uppercase"
@@ -133,7 +149,10 @@
           placeholder="Codice Fiscale"
           required
         />
-
+      </div>
+      </div>
+      <div class="row">
+        <div class="col">
         <label for="note">Note:</label>
         <input
           class="inputs form-control"
@@ -142,7 +161,10 @@
           name="note"
           placeholder="Note (facoltative)"
         />
-
+        </div>
+        </div>
+<div class="row">
+        <div class="col">
         <label for="materiaInsegnata">Materia insegnata:</label>
         <select
           class="inputs form-select"
@@ -158,7 +180,8 @@
           <option value="Geografia">Geografia</option>
           <option value="Filosofia">Filosofia</option>
         </select>
-
+        </div>
+          <div class="col">
         <label for="dataAssunzione">Data di assunzione:</label>
         <input
           class="inputs form-control"
@@ -167,10 +190,13 @@
           name="dataAssunzione"
           required
         />
+        </div>
+        </div>
       <div class="containerIndirizzo">
         <fieldset class="mt-4">
           <h2>Indirizzo</h2>
-
+          <div class="row">
+            <div class="col">
           <label for="via">Via:</label>
           <input
             class="inputs form-control"
@@ -179,7 +205,8 @@
             name="via"
             placeholder="Via"
           />
-
+          </div>
+<div class="col">
           <label for="cap">CAP:</label>
           <input
             class="inputs form-control"
@@ -188,7 +215,10 @@
             name="cap"
             placeholder="CAP"
           />
-
+          </div>
+          </div>
+<div class="row">
+  <div class="col">
           <label for="comune">Comune:</label>
           <input
             class="inputs form-control"
@@ -197,7 +227,8 @@
             name="comune"
             placeholder="Comune"
           />
-
+          </div>
+<div class="col">
           <label for="provincia">Provincia:</label>
           <input
             class="inputs form-control"
@@ -206,7 +237,10 @@
             name="provincia"
             placeholder="Provincia"
           />
-
+          </div>
+          </div>
+<div class="row">
+  <div class="col">
           <label for="nazione">Nazione:</label>
           <input
             class="inputs form-control"
@@ -215,12 +249,15 @@
             name="nazione"
             placeholder="Nazione"
           />
-        </fieldset>
+  </div>
 
+<div class="col">
         <div class="text-center mt-4">
           <button class="btn btn-primary" type="submit">Salva</button>
         </div>
       </form>
+</div>
+</div>
     </div>
     
 
