--- a/vediStudenti.html
+++ b/vediStudenti.html
@@ -11,37 +11,33 @@
       integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./assets/css/pie.css">
     <link rel="stylesheet" href="./assets/css/style.css">
   </head>
   <body>
-    <div>
-      <table id="tabella">
-        <tr>
-          <th>Codice Fiscale</th>
+    <main>
+    <header></header>
+      <table class="table table-striped">
+        <thead>
+          <tr>
+          <th>ID</th>
           <th>Nome</th>
           <th>Cognome</th>
           <th>Data di Nascita</th>
           <th>eMail</th>
           <th>Telefono</th>
           <th>Corso</th>
-          <th>Note</th>
           <th>Altro</th>
         </tr>
+        </thead>
+        <tbody id="tabella">
+        </tbody>
       </table>
-    </div>
+  
 
     <div class="col-12"><a class="btn btn-primary" href="http://localhost:3000/">Aggiungi Studenti</a></div>
     
-    <h2 class="text-center">Statistiche Studenti</h2>
-  <div id="charts">
-    <div class="chart-container">
-      <h3 class="text-center">Distribuzione Maschi e Femmine</h3>
-      <canvas id="genderChart"></canvas>
-      <br>
-      <h3 class="text-center">Età media degli studenti</h3>
-      <canvas id="graficoEta"></canvas>
-    </div>
+    </main>
+    <footer></footer>
     <script src="./assets/js/studenti.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
