corretto errori, sistemata lista studenti, aggiunto singolo studente

--- a/docente.html
+++ b/docente.html
@@ -8,6 +8,7 @@
   <h1>Dati docente</h1>
   <div id="infoDocente"></div>
 
+  <script src="/assets/js/main.js"></script>
   <script>
     // 1️⃣ Ottieni l'ID docente dal pathname: /docente/id
     const path = window.location.pathname;
