--- a/vediStudenti.html
+++ b/vediStudenti.html
@@ -14,16 +14,16 @@
     <link rel="stylesheet" href="./assets/css/style.css">
   </head>
   <body>
-    <main>
-    <header></header>
-      <table class="table table-striped">
+    <main class="site-main">
+    <header class="site-header"></header>
+      <table class="table table-striped shadow table-hover">
         <thead>
           <tr>
           <th>ID</th>
           <th>Nome</th>
           <th>Cognome</th>
           <th>Data di Nascita</th>
-          <th>eMail</th>
+          <th>email</th>
           <th>Telefono</th>
           <th>Corso</th>
           <th>Altro</th>
@@ -37,7 +37,8 @@
     <div class="col-12"><a class="btn btn-primary" href="http://localhost:3000/">Aggiungi Studenti</a></div>
     
     </main>
-    <footer></footer>
+    <footer class="site-footer"></footer>
+    <script src="./assets/js/main.js"></script>
     <script src="./assets/js/studenti.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
