--- a/aggiungiStudenti.html
+++ b/aggiungiStudenti.html
@@ -152,13 +152,14 @@
         />
       </div>
       
-      <div class="col-6"><a class="btn btn-primary" href="http://localhost:3000/vediStudenti">Vedi Studenti</a></div>
+      <div class="col-6"><a class="btn btn-primary" href="http://localhost:3000/visualizzaStudenti">Vedi Studenti</a></div>
       <div class="col-6">
         <button type="submit" class="btn btn-primary">Invia</button>
       </div>
     
     </form>
 
+    <script src="/assets/js/main.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
