--- a/login.html
+++ b/login.html
@@ -118,6 +118,7 @@
     </footer>
     <!-- /.site-footer -->
 
+    <script src="/assets/js/main.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
