--- a/statStudenti.html
+++ b/statStudenti.html
@@ -28,6 +28,7 @@
     </div>
     </main>
     <footer class="site-footer"></footer>
+    <script src="./assets/js/main.js"></script>
     <script src="./assets/js/script.js"></script>
     <script src="./assets/js/statStudenti.js"></script>
     <script
