--- a/studente.html
+++ b/studente.html
@@ -2,12 +2,86 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <title>Dati studente</title>
+  <title>Visualizza Dati studente</title>
+  <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/assets/css/style.css"/>
 </head>
 <body>
-  <h1>Dati studente</h1>
-  <div id="infoStudente"></div>
+  <header class="site-header"></header>
+  <main class="site-main">
 
+  <div class="card col-10 d-flex shadow mb-4">
+    <div class="card-header mx-0">
+    <h5 class="card-title mb-0">Informazioni Studente</h5>
+  </div> 
+  <div class="card-body d-flex align-items-center mx-0">
+    <img class="rounded-circle img_profilo mx-0" src="/assets/img/user_placeholder.png" alt="img_profilo" srcset="">
+    <div class="mx-0">
+    <p class="card-text text-start ms-3 mb-1">
+      <span id="nomeStudente"></span>
+      <span id="cognomeStudente"></span>
+    </p>
+    <p class="card-text text-start ms-3 mb-1" id="corso"></p>
+    <p class="card-text text-start ms-3 mb-1 text-muted" id="idStudente"></p>
+    </div>
+  </div>
+</div>
+
+<div class="dettagli-studente d-flex justify-content-between col-10">
+<div class="card col-5 d-flex shadow mx-0">
+    <div class="card-header mx-0">
+    <h5 class="card-title mb-0">Dettagli Personali</h5>
+  </div> 
+  <div class="card-body d-flex align-items-center mx-0">
+    <div class="mx-0">
+    <p class="card-text text-start ms-3 mb-1" id="email"></p>
+    <p class="card-text text-start ms-3 mb-1" id="tel"></p>
+    <p class="card-text text-start ms-3 mb-1" id="telefono"></p>
+    <p class="card-text text-start ms-3 mb-1" id="CF"></p>
+    <p class="card-text text-start ms-3 mb-1" id="dataNascita"></p>
+    <p class="card-text text-start ms-3 mb-1" id="sesso"></p>
+    <p class="card-text text-start ms-3 mb-1" id="luogoNascita"></p>
+    <p class="card-text text-start ms-3 mb-1" id="nazionalita"></p>
+    </div>
+  </div>
+</div>
+
+<div class="card col-5 d-flex shadow mx-0">
+    <div class="card-header mx-0">
+    <h5 class="card-title mb-0">Residenza</h5>
+  </div> 
+  <div class="card-body d-flex align-items-center mx-0">
+    <div class="mx-0">
+    <p class="card-text text-start ms-3 mb-1">
+      <span id="nomeStudente"></span>
+      <span id="cognomeStudente"></span>
+    </p>
+    <p class="card-text text-start ms-3 mb-1" id="indirizzo"></p>
+    <p class="card-text text-start ms-3 mb-1" id="cap"></p>
+    <p class="card-text text-start ms-3 mb-1" id="comuneResidenza"></p>
+    <p class="card-text text-start ms-3 mb-1" id="provincia"></p>
+    <p class="card-text text-start ms-3 mb-1" id="nazione"></p>
+    <p class="card-text text-start ms-3 mb-1" id="note"></p>
+    </div>
+  </div>
+</div>
+
+</div> <!-- /dettagli studente-->
+
+<div class="d-grid col-10 mt-3">
+  <button class="btn btn-light" type="button">Modifica dati personali</button>
+</div>
+
+  </main>
+
+  <footer class="site-footer"></footer>
+
+  <script src="/assets/js/main.js"></script>
   <script>
     // 1️⃣ Ottieni l'ID studente dal pathname: /studente/id
     const path = window.location.pathname;
@@ -27,20 +101,83 @@
         })
         .then(studente => {
           // 3️⃣ Mostra i dati in pagina
-          document.getElementById('infoStudente').innerHTML = `
-            <ul>
-              <li><strong>Nome:</strong> ${studente.infoPersonali.nome}</li>
-              <li><strong>Cognome:</strong> ${studente.infoPersonali.cognome}</li>
-              <li><strong>Email:</strong> ${studente.infoPersonali.email}</li>
-              <li><strong>Telefono:</strong> ${studente.infoPersonali.tel}</li>
-              <li><strong>Corso:</strong> ${studente.corso}</li>
-            </ul>
+          document.getElementById('nomeStudente').innerHTML = `
+            ${studente.infoPersonali.nome}
           `;
+          document.getElementById('cognomeStudente').innerHTML = `
+            ${studente.infoPersonali.cognome}
+          `;
+
+          document.getElementById('corso').innerHTML = `
+            ${studente.corso}
+          `;
+          document.getElementById('idStudente').innerHTML = `
+            ID Studente: ${studente.id}
+          `;
+
+          document.getElementById('email').innerHTML = `
+            Email: ${studente.infoPersonali.email}
+          `;
+
+          document.getElementById('telefono').innerHTML = `
+            Telefono: ${studente.infoPersonali.tel}
+          `;
+
+          document.getElementById('CF').innerHTML = `
+            Codice fiscale: ${studente.infoPersonali.CF}
+          `;
+
+          document.getElementById('dataNascita').innerHTML = `
+            Data di nascita: ${studente.infoPersonali.infoNascita.dataNascita}
+          `;
+
+          document.getElementById('sesso').innerHTML = `
+            Sesso: ${studente.infoPersonali.genere}
+          `;
+
+          document.getElementById('luogoNascita').innerHTML = `
+            Comune di Nascita: ${studente.infoPersonali.infoNascita.luogoNascita}
+          `;
+
+          document.getElementById('nazionalita').innerHTML = `
+            Nazionalità: ${studente.infoPersonali.infoNascita.nazionalita}
+          `;
+
+          document.getElementById('indirizzo').innerHTML = `
+            Indirizzo: ${studente.infoPersonali.residenza.via}
+          `;
+          document.getElementById('cap').innerHTML = `
+            CAP: ${studente.infoPersonali.residenza.cap}
+          `;
+
+          document.getElementById('comuneResidenza').innerHTML = `
+            Comune di residenza: ${studente.infoPersonali.residenza.comune}
+          `;
+
+          document.getElementById('provincia').innerHTML = `
+            Provincia: ${studente.infoPersonali.residenza.provincia}
+          `;
+
+          document.getElementById('nazione').innerHTML = `
+            Nazione: ${studente.infoPersonali.residenza.nazione}
+          `;
+
+          document.getElementById('comuneResidenza').innerHTML = `
+            Note: ${studente.note}
+          `;        
         })
         .catch(err => {
           document.getElementById('infoStudente').textContent = err.message;
         });
     }
+
+
   </script>
+  <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+      crossorigin="anonymous"
+    ></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
