--- a/docente.html
+++ b/docente.html
@@ -2,44 +2,133 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <title>Dati docente</title>
+  <title>Visualizza Dati docente</title>
+  <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/assets/css/style.css"/>
 </head>
 <body>
-  <h1>Dati docente</h1>
-  <div id="infoDocente"></div>
+  <header class="site-header"></header>
+  <main class="site-main">
+
+  <div class="card col-10 d-flex shadow mb-4">
+    <div class="card-header mx-0">
+    <h5 class="card-title mb-0">Informazioni docente</h5>
+  </div> 
+  <div class="card-body d-flex align-items-center mx-0">
+    <img class="rounded-circle img_profilo mx-0" src="/assets/img/user_placeholder.png" alt="img_profilo" srcset="">
+    <div class="mx-0">
+    <p class="card-text text-start ms-3 mb-1">
+      <span id="nome"></span>
+      <span id="cognome"></span>
+    </p>
+    <p class="card-text text-start ms-3 mb-1" id="corso"></p>
+    <p class="card-text text-start ms-3 mb-1 text-muted" id="iddocente"></p>
+    </div>
+  </div>
+</div>
+
+<div class="dettagli-docente d-flex justify-content-between col-10">
+<div class="card col-5 d-flex shadow mx-0">
+    <div class="card-header mx-0">
+    <h5 class="card-title mb-0">Dettagli Personali</h5>
+  </div> 
+  <div class="card-body d-flex align-items-center mx-0">
+    <div class="mx-0">
+    <p class="card-text text-start ms-3 mb-1" id="sesso"></p>
+    <p class="card-text text-start ms-3 mb-1" id="email"></p>
+    <p class="card-text text-start ms-3 mb-1" id="telefono"></p>
+    <p class="card-text text-start ms-3 mb-1" id="dataNascita"></p>
+    <p class="card-text text-start ms-3 mb-1" id="cf"></p>
+    <p class="card-text text-start ms-3 mb-1" id="materiaInsegnata"></p>
+    <p class="card-text text-start ms-3 mb-1" id="dataAssunzione"></p>
+     <p class="card-text text-start ms-3 mb-1" id="note"></p>
+  </div>
+</div>
+</div>
+
+<div class="card col-5 d-flex shadow mx-0">
+    <div class="card-header mx-0">
+    <h5 class="card-title mb-0">Residenza</h5>
+  </div> 
+  <div class="card-body d-flex align-items-center mx-0">
+    <div class="mx-0">
+    <p class="card-text text-start ms-3 mb-1">
+      <span id="nomedocente"></span>
+      <span id="cognomedocente"></span>
+    </p>
+    <p class="card-text text-start ms-3 mb-1" id="via"></p>
+    <p class="card-text text-start ms-3 mb-1" id="cap"></p>
+    <p class="card-text text-start ms-3 mb-1" id="comune"></p>
+    <p class="card-text text-start ms-3 mb-1" id="provincia"></p>
+    <p class="card-text text-start ms-3 mb-1" id="nazione"></p>
+    </div>
+  </div>
+</div>
+</div>
+ <!-- /dettagli docente-->
+
+<div class="d-grid col-10 mt-3">
+  <button class="btn btn-light" type="button">Modifica dati personali</button>
+</div>
+
+  </main>
+
+  <footer class="site-footer"></footer>
 
   <script src="/assets/js/main.js"></script>
   <script>
     // 1️⃣ Ottieni l'ID docente dal pathname: /docente/id
     const path = window.location.pathname;
-    const idDocente = path.split("/").pop();
+    const iddocente = path.split("/").pop();
+    console.log(iddocente);
+    
     
 
-    if (!idDocente) {
-      document.getElementById('infoDocente').textContent = 'ID docente non fornito.';
-    } else {
-      // 2️⃣ Richiama l'API per un singolo docente
-      fetch(`/api/docente/${idDocente}`)
-        .then(res => {
-          if (!res.ok) throw new Error('docente non trovato');
-          return res.json();
-        })
-        .then(docente => {
-          // 3️⃣ Mostra i dati in pagina
-          document.getElementById('infoDocente').innerHTML = `
-            <ul>
-              <li><strong>Nome:</strong> ${docente.infoPersonali.nome}</li>
-              <li><strong>Cognome:</strong> ${docente.infoPersonali.cognome}</li>
-              <li><strong>Email:</strong> ${docente.infoPersonali.email}</li>
-              <li><strong>Telefono:</strong> ${docente.infoPersonali.telefono}</li>
-              <li><strong>Corso:</strong> ${docente.corso}</li>
-            </ul>
-          `;
-        })
-        .catch(err => {
-          document.getElementById('infoDocente').textContent = err.message;
-        });
-    }
+   if (!iddocente) {
+  document.getElementById('infoDocente').textContent = 'ID docente non fornito.';
+} else {
+  // 2️⃣ Richiama l'API per un singolo docente
+  fetch(`/api/docente/${iddocente}`)
+    .then(res => {
+      if (!res.ok) throw new Error('docente non trovato');
+      return res.json();
+    })
+    .then(docente => {
+      // 3️⃣ Mostra i dati in pagina
+      document.getElementById('nome').innerHTML = docente.infoPersonali.nome;
+      document.getElementById('cognome').innerHTML = docente.infoPersonali.cognome;
+      document.getElementById('sesso').innerHTML = `Sesso: ${docente.infoPersonali.sesso}`;
+      document.getElementById('email').innerHTML = `Email: ${docente.infoPersonali.email}`;
+      document.getElementById('telefono').innerHTML = `Telefono: ${docente.infoPersonali.telefono}`;
+      document.getElementById('dataNascita').innerHTML = `Data di nascita: ${docente.infoPersonali.dataNascita}`;
+      document.getElementById('cf').innerHTML = `Codice fiscale: ${docente.infoPersonali.cf}`;
+      document.getElementById('materiaInsegnata').innerHTML = `Materia Insegnata: ${docente.lavoro.materiaInsegnata}`;
+      document.getElementById('dataAssunzione').innerHTML = `Data di Assunzione: ${docente.lavoro.dataAssunzione}`;
+      document.getElementById('via').innerHTML = `Via: ${docente.residenza.via}`;
+      document.getElementById('cap').innerHTML = `CAP: ${docente.residenza.cap}`;
+      document.getElementById('comune').innerHTML = `Comune: ${docente.residenza.comune}`;
+      document.getElementById('provincia').innerHTML = `Provincia: ${docente.residenza.provincia}`;
+      document.getElementById('nazione').innerHTML = `Nazione: ${docente.residenza.nazione}`;
+      document.getElementById('note').innerHTML = `Note: ${docente.note}`;
+      document.getElementById('iddocente').innerHTML = `ID docente: ${docente.id}`;
+    })
+    .catch(err => {
+      document.getElementById('infoDocente').textContent = err.message;
+    });
+}
+
+
   </script>
+  <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+      crossorigin="anonymous"
+    ></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
