aggiornamento giorgio&flory

--- a/statStudenti.html
+++ b/statStudenti.html
@@ -27,7 +27,7 @@
       <br>
       <div class="graficoEta mt-5">
       <h3 class="text-center">Età media degli studenti</h3>
-      <canvas id="graficoEta"></canvas>
+      <canvas id="graficoEta"  style="position: relative; height:40vh; width:80vw"></canvas>
       </div>
     </div>
     </main>
