--- a/login.html
+++ b/login.html
@@ -32,16 +32,14 @@
             </svg>
           </div>
           <div class="col-2 d-flex justify-content-center align-items-center">
-            <button type="submit">ACCOUNT</button>
+            <button class="btn-account" type="submit">ACCOUNT</button>
           </div>
         </div>
       </div>
     </header>
     <!--  ./header -->
 
-    <main class="site-main">
-      <div class="alert w-25 m-auto mt-5" id="alert_login"></div>
-      
+    <main class="site-main site-main-login">
       <div class="main d-flex flex-column">
         <div class="title">
           <h3><u>Login</u></h3>
@@ -92,7 +90,6 @@
               </div>
             </div>
             <button
-              onclick="mostraMessaggio()"
               type="submit"
               id="btn-login"
               class="btn-login w-100 rounded-pill"
@@ -100,9 +97,10 @@
               LOGIN
             </button>
           </form>
+          <div id="alert_login" class="mt-3 alert" role="alert"></div>
         </div>
 
-        <p class="text-black-50">New to Logo? <a>Register Here</a></p>
+        <p class="text-black-50">New to Logo? Register <a>Here</a></p>
       </div>
     </main>
     <!--  ./main -->
@@ -118,7 +116,6 @@
     </footer>
     <!-- /.site-footer -->
 
-    <script src="/assets/js/main.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
