--- a/vediStudenti.html
+++ b/vediStudenti.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="./assets/css/style.css">
   </head>
   <body>
-    <main class="site-main">
-    <header class="site-header"></header>
+    <main class="site-main site-main-studenti">
+    <header id="site-header" class="site-header"></header>
       <table class="table table-striped shadow table-hover">
         <thead>
           <tr>
@@ -37,7 +37,7 @@
     <div class="col-12"><a class="btn btn-primary" href="http://localhost:3000/">Aggiungi Studenti</a></div>
     
     </main>
-    <footer class="site-footer"></footer>
+    <footer id="site-footer" class="site-footer"></footer>
     <script src="./assets/js/main.js"></script>
     <script src="./assets/js/studenti.js"></script>
     <script
