--- a/statStudenti.html
+++ b/statStudenti.html
@@ -15,10 +15,10 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <header class="site-header"></header>
+    <header id="site-header"></header>
     <main class="site-main">
         <h1 class="text-center">Statistiche Studenti</h1>
-  <div id="charts d-flex">
+  <div id="charts">
     <div class="chart-container d-flex align-content-center mt-5">
       <div class="graficoGenere">
       <h3 class="text-center">Distribuzione Maschi e Femmine</h3>
