--- a/studente.html
+++ b/studente.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/assets/css/style.css"/>
 </head>
 <body>
-  <header class="site-header"></header>
+  <header id="site-header" class="site-header"></header>
   <main class="site-main">
 
   <div class="card col-10 d-flex shadow mb-4">
