bozza pre lancio

--- a/aggiungiStudenti.html
+++ b/aggiungiStudenti.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
+    <header id="site-header"></header>
     <h1 class="text-center">Modulo di Inserimento Studenti</h1>
 
     <form id="inserisciStudenti" class="row g-3">
@@ -158,6 +159,8 @@
       </div>
     
     </form>
+
+    <footer id="site-footer"></footer>
 
     <script src="/assets/js/main.js"></script>
     <script
