--- a/login.html
+++ b/login.html
@@ -12,9 +12,9 @@
     />
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
-  <body>
+  <body class="login-body">
     <header class="site-header">
-      <div class="container-header">
+      <div class="container-header header-login">
         <div class="row h-100">
           <div class="col-2"></div>
           <div class="col-8 d-flex justify-content-center align-items-center">
@@ -40,7 +40,7 @@
     <!--  ./header -->
 
     <main class="site-main site-main-login">
-      <div class="main d-flex flex-column">
+      <div class="main d-flex flex-column container-main-login">
         <div class="title">
           <h3><u>Login</u></h3>
           <pre>Welcome onboard with us!</pre>
@@ -97,10 +97,8 @@
               LOGIN
             </button>
           </form>
-          <div id="alert_login" class="mt-3 alert" role="alert"></div>
+          <div id="alert_login" class="mb-0 alert" role="alert"></div>
         </div>
-
-        <p class="text-black-50">New to Logo? Register <a>Here</a></p>
       </div>
     </main>
     <!--  ./main -->
