--- a/inserimentoDocenti.html
+++ b/inserimentoDocenti.html
@@ -17,7 +17,7 @@
     <header id="site-header"></header>
     <h1 class="text-center pt-3">Modulo di Inserimento Docenti</h1>
 
-    <form id="inserisciDocenti" class="row g-3 form-studente">
+    <form id="inserisciDocenti" class="row g-3 form-studente pb-5 mb-4">
       <div class="col-md-5">
         <label for="nome_docente" class="form-label">Nome</label>
         <input type="text" class="form-control" id="nome_docente" name="nome" required />
