--- a/login.html
+++ b/login.html
@@ -103,7 +103,7 @@
     </main>
     <!--  ./main -->
 
-    <footer class="site-footer">
+    <footer class="site-footer footer-login">
       <div class="container-footer">
         <p>
           Sede legale: Via del Paradiso, 4 - 01100 Viterbo (VT) C.F. 90097600564
