--- a/statDocenti.html
+++ b/statDocenti.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <header class="site-header"></header>
+    <header class="site-header" id="site-header"></header>
     <main class="site-main">
         <h1 class="text-center">Statistiche docenti</h1>
   <div id="charts">
