--- a/vediStudenti.html
+++ b/vediStudenti.html
@@ -16,6 +16,7 @@
   <body>
     <main class="site-main site-main-studenti">
     <header id="site-header" class="site-header"></header>
+    <div class="container">
       <table class="table table-striped shadow table-hover">
         <thead>
           <tr>
@@ -32,9 +33,9 @@
         <tbody id="tabella">
         </tbody>
       </table>
-  
+      </div>
 
-    <div class="col-12"><a class="btn btn-primary" href="http://localhost:3000/">Aggiungi Studenti</a></div>
+    <div class="col-11 d-flex flex-row-reverse"><a class="btn invia-form aggiungi-btn" href="http://localhost:3000/">Aggiungi Studenti</a></div>
     
     </main>
     <footer id="site-footer" class="site-footer"></footer>
