--- a/vediDocenti.html
+++ b/vediDocenti.html
@@ -36,7 +36,7 @@
       </div>
   
 
-    <div class="col-12"><a class="btn invia-form aggiungi-btn" href="http://localhost:3000/inserimentoDocenti.html">Aggiungi Docenti</a></div>
+    <div class="col-11 d-flex flex-row-reverse"><a class="btn invia-form aggiungi-btn" href="http://localhost:3000/inserimentoDocenti.html">Aggiungi Docenti</a></div>
     
     </main>
     <footer class="site-footer" id="site-footer"></footer>
