--- a/statStudenti.html
+++ b/statStudenti.html
@@ -32,7 +32,7 @@
     </div>
     </main>
     
-    <footer class="site-footer"></footer>
+    <footer id="site-footer" class="site-footer"></footer>
     <script src="./assets/js/main.js"></script>
     <script src="./assets/js/script.js"></script>
     <script src="./assets/js/statStudenti.js"></script>
