--- a/statDocenti.html
+++ b/statDocenti.html
@@ -32,7 +32,7 @@
     </div>
     </main>
     
-    <footer class="site-footer"></footer>
+    <footer id="site-footer" class="site-footer"></footer>
     <script src="./assets/js/main.js"></script>
     <script src="./assets/js/statDocenti.js"></script>
     <script
