--- a/studente.html
+++ b/studente.html
@@ -74,12 +74,12 @@
 </div> <!-- /dettagli studente-->
 
 <div class="d-grid col-10 mt-3">
-  <button class="btn btn-light" type="button">Modifica dati personali</button>
+  <button class="btn btn-light d-none" type="button">Modifica dati personali</button>
 </div>
 
   </main>
 
-  <footer class="site-footer"></footer>
+  <footer id="site-footer" class="site-footer"></footer>
 
   <script src="/assets/js/main.js"></script>
   <script>
