--- a/docente.html
+++ b/docente.html
@@ -12,14 +12,14 @@
     <link rel="stylesheet" href="/assets/css/style.css"/>
 </head>
 <body>
-  <header class="site-header"></header>
+  <header id="site-header" class="site-header"></header>
   <main class="site-main">
 
-  <div class="card col-10 d-flex shadow mb-4">
+  <div class="card col-10 d-flex shadow mmt-0 m-auto">
     <div class="card-header mx-0">
     <h5 class="card-title mb-0">Informazioni docente</h5>
   </div> 
-  <div class="card-body d-flex align-items-center mx-0">
+  <div class="card-body d-flex align-items-center mx-0 m-auto">
     <img class="rounded-circle img_profilo mx-0" src="/assets/img/user_placeholder.png" alt="img_profilo" srcset="">
     <div class="mx-0">
     <p class="card-text text-start ms-3 mb-1">
@@ -32,8 +32,8 @@
   </div>
 </div>
 
-<div class="dettagli-docente d-flex justify-content-between col-10">
-<div class="card col-5 d-flex shadow mx-0">
+<div class="dettagli-docente d-flex justify-content-between m-auto col-10">
+<div class="card col-6 d-flex shadow mx-0">
     <div class="card-header mx-0">
     <h5 class="card-title mb-0">Dettagli Personali</h5>
   </div> 
@@ -51,7 +51,7 @@
 </div>
 </div>
 
-<div class="card col-5 d-flex shadow mx-0">
+<div class="card col-6 d-flex shadow mx-0">
     <div class="card-header mx-0">
     <h5 class="card-title mb-0">Residenza</h5>
   </div> 
@@ -73,12 +73,12 @@
  <!-- /dettagli docente-->
 
 <div class="d-grid col-10 mt-3">
-  <button class="btn btn-light" type="button">Modifica dati personali</button>
+  <button class="btn btn-light d-none" type="button">Modifica dati personali</button>
 </div>
 
   </main>
 
-  <footer class="site-footer"></footer>
+  <footer id="site-footer" class="site-footer"></footer>
 
   <script src="/assets/js/main.js"></script>
   <script>
